<resources>
    <string name="app_name">GyverLamp</string>
    <string name="action_settings">Settings</string>
    <string name="connect_no">нет подключения</string>
    <string name="connect_ok">подключено</string>
    <string name="setup">Настройка</string>
    <string name="sleep">Автовыключение</string>
    <string name="alarm">Будильник</string>
    <string name="not_valid_ip">\n\nНекорректный IP адрес\n\n</string>
    <string name="not_valid_port">\n\nНекорректный порт\n\n</string>
    <string name="not_setup">\n\nНе настроен IP / порт\n\n</string>
    <string name="day7">Воскресенье</string>
    <string name="day6">Суббота</string>
    <string name="day5">Пятница</string>
    <string name="day4">Четверг</string>
    <string name="day3">Среда</string>
    <string name="day2">Вторник</string>
    <string name="day1">Понедельник</string>
    <string name="time00_00">00:00</string>
    <string name="sleep_txt">Выключение через</string>
    <string name="power">On/Off</string>
    <string name="startSleep">Запуcтить таймер</string>
    <string name="minuts">минут</string>

    <string-array name="array_name">
        <item>Конфети</item>
        <item>Огонь</item>
        <item>Радуга вертикальная</item>
        <item>Радуга горизонтальная</item>
        <item>Смена цвета</item>
        <item>Безумие</item>
        <item>Облока</item>
        <item>Лава</item>
        <item>Плазма</item>
        <item>Радуга</item>
        <item>Павлин</item>
        <item>Зебра</item>
        <item>Лес</item>
        <item>Океан</item>
        <item>Постоянный цвет</item>
        <item>Снег</item>
        <item>Матрица</item>
        <item>Светлячки</item>
    </string-array>




</resources>


